charts/ops/grafana/grafana/templates/istio.yaml
kind: Gateway
apiVersion: networking.istio.io/v1beta1
metadata:
  name: grafana-gw
  namespace: grafana
spec:
  servers:
    - hosts:
        - grafana.prod.cluster.yanychoi.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: grafana-gw-tls
        mode: SIMPLE
    - hosts:
        - grafana.prod.cluster.yanychoi.com
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    app: istio-ingressgateway

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: grafana
spec:
  hosts:
    - grafana.prod.cluster.yanychoi.com
  gateways:
    - grafana-gw
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: grafana
